# floci-compatibility-tests

./: .gitignore  README.md  justfile
.github/workflows/: compatibility-tests.yml
compat-cdk/: run.sh
compat-cdk/lib/: floci-stack.ts
compat-cdk/test/: cdk.bats
compat-cdk/test/test_helper/: common-setup.bash
compat-opentofu/: run.sh
compat-opentofu/test/: opentofu.bats
compat-opentofu/test/test_helper/: common-setup.bash
compat-terraform/: Dockerfile  main.tf  provider.tf  run.sh
compat-terraform/test/: terraform.bats
compat-terraform/test/test_helper/: common-setup.bash
lib/: compat-common.bash
sdk-test-awscli/: README.md  test_all.sh
sdk-test-awscli/test/: cognito.bats  dynamodb.bats  kms.bats  s3-notifications.bats  s3.bats  secretsmanager.bats  ses.bats  sqs.bats
sdk-test-go/: go.mod  go.sum  main.go
sdk-test-go/tests/: cloudwatch_test.go  kinesis_test.go  lambda_test.go  s3_test.go  sqs_test.go
sdk-test-java/: pom.xml
sdk-test-node/: test-all.mjs
sdk-test-python/: conftest.py  requirements.txt  test_all.py
sdk-test-python/tests/: test_cloudwatch.py  test_cognito.py  test_dynamodb.py  test_iam.py  test_kms.py  test_s3_cors.py  test_s3_notifications.py
sdk-test-rust/: Cargo.toml
sdk-test-rust/src/: lib.rs  main.rs
sdk-test-rust/tests/: cloudwatch_test.rs  lambda_test.rs  s3_test.rs
sdk-test-typescript/: Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
sdk-test-typescript/tests/: cloudwatch.test.ts  kms.test.ts  lambda.test.ts  s3-notifications.test.ts  s3.test.ts  setup.ts
(+44 files in other folders)
